k8s/kafka-schema-registry.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka-schema-registry
  labels:
    app: kafka-schema-registry
spec:
  ports:
    - port: 8081
      name: listener
  clusterIP: None
  selector:
    app: kafka-schema-registry
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: kafka-schema-registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-schema-registry
    spec:
      containers:
      - name: kafka-schema-registry
        image: confluentinc/cp-schema-registry:3.2.1-6
        ports:
        - containerPort: 8081
          name: listener
