k8s/solr.yaml
kind: Service
apiVersion: v1
metadata:
  name: solr
  labels:
    app: solr
spec:
  ports:
    - port: 8983
      name: host-port
  clusterIP: None
  selector:
    app: solr
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: solr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: solr
    spec:
      containers:
      - name: solr
        image: registry.zing.zenoss.eng/zenosszing/zing-solr:8f1690f6
        command: [ init-solr.sh, solr, start, -f, -cloud ]
        ports:
        - containerPort: 8983
          name: host-port
