k8s/spark-master.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  labels:
    app: spark-master
spec:
  ports:
    - port: 7077
      name: service
  clusterIP: None
  selector:
    app: spark-master
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: spark-master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image: registry.zing.zenoss.eng/zenosszing/zing-spark:a94e7040
        command: [ /opt/spark/sbin/start-master.sh ]
        ports:
        - containerPort: 8080
          name: webui
        - containerPort: 7077
          name: service
