k8s/spark-worker.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-worker
  labels:
    app: spark-worker
spec:
  ports:
    - port: 7078
      name: service
  clusterIP: None
  selector:
    app: spark-worker
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: spark-worker
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: registry.zing.zenoss.eng/zenosszing/zing-spark:a94e7040
        command: [ /opt/spark/sbin/start-slave.sh, 'spark://spark-master:7077' ]
        ports:
        - containerPort: 8081
          name: webui
        - containerPort: 7078
          name: service
