k8s/web.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
    - port: 80
  clusterIP: None
  selector:
    app: web

---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: registry.zing.zenoss.eng/zenoss/zing-web:3be9fc87
        ports:
        - containerPort: 80
