k8s/graphql.yaml
kind: Service
apiVersion: v1
metadata:
  name: graphql
  labels:
    app: graphql
spec:
  ports:
    - port: 8080
      name: rest
  clusterIP: None
  selector:
    app: graphql

---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: graphql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: registry.zing.zenoss.eng/zenosszing/graphql:802acc45
        ports:
        - containerPort: 8080
          name: rest
        volumeMounts:
        - name: authorization-secret
          mountPath: /run/secrets
      volumes:
      - name: authorization-secret
        secret:
          secretName: authorization
          items: 
          - key: value
            path: authorization_secret

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata: 
  name: graphql
  annotations: 
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
  labels:
    tier: service
spec:
  rules:
  - http: 
      paths:
      - path: /api/graphql
        backend: 
          serviceName: graphql
          servicePort: 8080
